--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   graphql_flutter: ^5.1.2
   flutter_modular: ^5.0.0
   flutter_secure_storage:
+  flutter_rating_bar:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
